--- a/src/projects.json
+++ b/src/projects.json
@@ -1,40 +1,45 @@
 [
     {
+      "id": 1,
       "title": "Team Page Constructor", 
       "repository": "https://github.com/FlorSing/team-page-constructor",
-      "screenshot": "https://github.com/FlorSing/team-page-constructor/blob/main/assets/teamPageConstructor.jpg", 
+      "screenshot": "https://drive.google.com/file/d/1JxKOR-ca6z9F17ETH0XeujvTsW2NHg9x/view?usp=share_link", 
       "deployment": "https://github.com/FlorSing/team-page-constructor/blob/main/starter/output/team.html" 
     },
-  
+    
     {
+      "id": 2,
       "title": "Password Generator ver.01", 
       "repository": "https://github.com/FlorSing/Password-Generator-ver.01",
-      "screenshot": "https://github.com/FlorSing/Password-Generator-ver.01/blob/main/assets/images/05-javascript-challenge-demo.png", 
+      "screenshot": "https://drive.google.com/file/d/1EFO7GXJhSTj1ni0g1DRY3y0YiktqSqMy/view?usp=share_link", 
       "deployment": "https://florsing.github.io/Password-Generator-ver.01/" 
     },
   
     {
+      "id": 3,
       "title": "Web Calendar Planner",
       "repository": "https://github.com/FlorSing/Web-Calendar-Planner",
       "screenshot": "https://user-images.githubusercontent.com/118206899/215060931-b0f4fd1d-7e1a-4d46-8462-0dc0b29fdf84.gif", 
       "deployment": "https://florsing.github.io/Web-Calendar-Planner/"
     },
-  
     {
+      "id": 4,
       "title": "5-day Weather Outlook Dashboard",
       "repository": "https://github.com/FlorSing/5-day-Weather-Outlook-Dashboard-",
-      "screenshot": "https://github.com/FlorSing/My-Portfolio-created-with-React-/blob/main/portfolio/assets/weatherforecastscreenshot.jpg",
+      "screenshot": "https://drive.google.com/file/d/1c47s_CDKB9lujEPquxpcHPbD4n-1leok/view?usp=share_link",
       "deployment": "https://florsing.github.io/5-day-Weather-Outlook-Dashboard-/"
     },
     
     {
+      "id": 5,
       "title": "README.md Creator",
       "repository": "https://github.com/FlorSing/readme-creator",
-      "screenshot": "https://github.com/FlorSing/readme-creator/blob/main/dist/Untitled_%20Mar%205%2C%202023%205_00%20PM.webm",
+      "screenshot": "https://drive.google.com/file/d/1ncydCZjEBZC729uqCYSWMbcpC7tHPyCN/view?usp=share_link",
       "deployment": "https://github.com/FlorSing/readme-creator/blob/main/dist/README.md"
     },
   
     {
+      "id": 6,
       "title": "Web Quiz App Prototype",
       "repository": "https://github.com/FlorSing/web-quiz-app-prototype",
       "screenshot": "https://user-images.githubusercontent.com/118206899/213149911-d30a2aff-f9b4-430c-b97a-beb6c8fe28ff.gif",
@@ -42,9 +47,10 @@
     },
   
     {
+      "id": 7,
       "title": "WordGiffy (Group Project)",
       "repository": "https://github.com/DavidBlueLamassu/WordGiffy",
-      "screenshot": "https://github.com/FlorSing/My-Portfolio-created-with-React-/blob/main/portfolio/assets/wordgiffyscreenshot.jpg",
+      "screenshot": "https://drive.google.com/file/d/14Plwgnz4-QLGT1Ok3Hb_RkT6ZiUcSlCo/view?usp=share_link",
       "deployment": "https://davidbluelamassu.github.io/WordGiffy/"
     }
   
