--- a/src/projects.json
+++ b/src/projects.json
@@ -3,7 +3,7 @@
       "id": 1,
       "title": "Team Page Constructor", 
       "repository": "https://github.com/FlorSing/team-page-constructor",
-      "screenshot": "https://drive.google.com/file/d/1JxKOR-ca6z9F17ETH0XeujvTsW2NHg9x/view?usp=share_link", 
+      "screenshot": "https://1drv.ms/i/s!Ar37NH447cjoxHr65YS-qSErKx1s?e=D0wfjo", 
       "deployment": "https://github.com/FlorSing/team-page-constructor/blob/main/starter/output/team.html" 
     },
     
