--- a/public/projects.json
+++ b/public/projects.json
@@ -3,7 +3,7 @@
       "id": 1,
       "title": "Team Page Constructor", 
       "repository": "https://github.com/FlorSing/team-page-constructor",
-      "screenshot": "PUBLIC_URL/assets/teampageconst.png", 
+      "screenshot": "https://drive.google.com/file/d/1JxKOR-ca6z9F17ETH0XeujvTsW2NHg9x/view?usp=share_link", 
       "deployment": "https://github.com/FlorSing/team-page-constructor/blob/main/starter/output/team.html" 
     },
     
