updated README using readme creator app done

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/FlorSing/portfolio-page-using-react",
+  "homepage": "https://florsing.github.io/portfolio-page-using-react",
   "name": "portfolio-page-using-react",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +41,4 @@
       "last 1 safari version"
     ]
   }
-
-  
 }
